# Oidor

./: GradioOidor.ipynb  Oidor.ipynb  README.md  censurado.docx  hello.py  pyproject.toml  transcripcion.docx  transcripcion1.docx
.ipynb_checkpoints/: GradioOidor-checkpoint.ipynb  Oidor-checkpoint.ipynb
