[project]
name = "finalia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "datasets>=3.1.0",
    "ffmpeg>=1.4",
    "gradio>=5.3.0",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "ollama>=0.3.3",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.46.3",
]
